# rlenvforapp

./: .gitignore  DEB-GPG-KEY-NVIDIA-HPC-SDK  Dockerfile  GpuMonitor.ps1  Pipfile  README.md  code_coverage_collector_strategy.json  compose.yaml  default_value.json  form_submit_criteria.json  input_value_probability.json  main.py  manual_verbalizer.txt  pip0.py  pipfile.bak  pyproject.toml  reset.ps1
.github/workflows/: pylint.yml
.guthub/: CODEOWNERS
.run/: main.run.xml  reset.ps1.run.xml
RLEnvForApp/: __init__.py
RLEnvForApp/adapter/: __init__.py
RLEnvForApp/adapter/agent/: LLMController.py  RLController.py  __init__.py
RLEnvForApp/adapter/agent/layer/: CustomLayerFactoryService.py
RLEnvForApp/adapter/agent/model/: ModelController.py  ModelFactory.py  MonkeyAdapter.py  __init__.py
RLEnvForApp/adapter/agent/policy/: DQNCustomPolicy.py  PPO2CustomPolicy.py  PPO2LnLstmCustomPolicy.py  PPO2LstmCustomPolicy.py  __init__.py
RLEnvForApp/adapter/applicationUnderTest/: DockerServerHandler.py  __init__.py
RLEnvForApp/adapter/applicationUnderTest/config/: DockerServerConfig.py
RLEnvForApp/adapter/controller/: ApplicationUnderTestController.py
RLEnvForApp/adapter/environment/: __init__.py
RLEnvForApp/adapter/environment/factory/: GymEnvironmentFactory.py  __init__.py
RLEnvForApp/adapter/environment/gym/: AIGuideEnvironment.py  AIGuideHTMLLogEnvironment.py  __init__.py
RLEnvForApp/adapter/llmService/: groq.py
RLEnvForApp/adapter/repository/: __init__.py
RLEnvForApp/adapter/repository/applicationUnderTest/: InMemoryApplicationUnderTestRepository.py  __init__.py
RLEnvForApp/adapter/repository/episodeHandler/: InMemoryEpisodeHandlerRepository.py  __init__.py
RLEnvForApp/adapter/repository/targetPage/: __init__.py  (+1 more)
RLEnvForApp/adapter/targetPagePort/: AIGuideHTMLLogTargetPagePort.py  AIGuideTargetPagePort.py  AIGuideVerifyTargetPagePort.py  FileManager.py  ITargetPagePort.py  __init__.py
RLEnvForApp/application/timeLoggerService/: TimeLoggerService.py
RLEnvForApp/domain/: __init__.py
RLEnvForApp/domain/applicationUnderTest/: ApplicationUnderTest.py  __init__.py
RLEnvForApp/domain/environment/: __init__.py  category.py  inputSpace.py
RLEnvForApp/domain/llmService/: ILlmService.py  __init__.py
RLEnvForApp/domain/targetPage/: AppEvent.py  Directive.py  TargetPage.py  __init__.py
RLEnvForApp/logger/: logger.py
RLEnvForApp/usecase/: __init__.py
RLEnvForApp/usecase/environment/: __init__.py
RLEnvForApp/usecase/repository/: ApplicationUnderTestRepository.py  EpisodeHandlerRepository.py  TargetPagePoolRepository.py  TargetPageRepository.py
RLEnvForApp/usecase/targetPage/: __init__.py
configuration/config/: AIGUIDE_File_Environment.ini  AIGUIDE_File_Environment_Cosine_Similarity.ini  AIGUIDE_File_Environment_No_Coverage.ini  AIGUIDE_Web_Environment.ini  AIGUIDE_Web_Environment_Cosine_Similarity.ini  AIGUIDE_Web_Environment_No_Coverage.ini  LLM.ini  default.ini
configuration/di/: AgentDIContainers.py  DIConfiguration.py  EnvironmentDIContainers.py  ModelDIContainers.py
configuration/model/: default_model_config.ini
test/application/: testTimeLogger.py
test/crawler/: testCrawlJaxGetImage.py  testCrawlerExecuteActionUseCaseTest.py  testWebCrawlerGetCoverage.py
test/experiment/W2vExperiment/: testW2vInner.py
test/experiment/experiment_0311/: testExecuteActionUseCaseIn0311.py
test/experiment/unittest/: testAIGuideRewardCalculatorService.py
test/unitTest/adapter/: testFileManager.py
test/usecase/: HirerarchyInitial.py  __init__.py
test/usecase/applicationUnderTest/: testStartApplicationUnderTestUseCase.py  testStopApplicationUnderTestUseCase.py
test/usecase/environment/: __init__.py
test/usecase/targetPage/: TargetPageHierarchyInitial.py  __init__.py
(+199 files in other folders)
